--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "dotenv": "^16.0.0",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^8.14.0",
