--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "extends": "stylelint-config-airbnb"
   },
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "mongoose": "^6.3.1",
