--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "NODE_ENV=production node server",
-    "dev": "nodemon server"
+    "dev": "nodemon server",
+    "lint": "eslint . --quiet --ext .js"
   },
   "author": "Ted Semashov",
   "license": "MIT",
@@ -17,7 +18,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "mongoose": "^6.3.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "eslint": "^8.14.0",
