--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.0",
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
+    "node-geocoder": "^4.0.0",
     "slugify": "^1.6.5"
   },
   "devDependencies": {
