--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "extends": "stylelint-config-airbnb"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "express-fileupload": "^1.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.0.0",
