--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.0.0",
+    "nodemailer": "^6.7.5",
     "slugify": "^1.6.5"
   },
   "devDependencies": {
